--- a/hello_world/Dockerfile
+++ b/hello_world/Dockerfile
@@ -1,14 +1,21 @@
 FROM rustlang/rust:nightly-buster as builder
 
-ENV ROCKET_ADDRESS=0.0.0.0
-ENV ROCKET_PORT=8080
-
-ADD . /app
+ADD src /app/src
+ADD Cargo.toml /app
 
 WORKDIR /app
 
 RUN rustup default nightly
+RUN cargo build --release
 
-RUN cargo build
+FROM ubuntu:rolling
 
-CMD ["cargo", "run"]
+COPY --from=builder /app/target/release/hello_world hello_world
+
+RUN apt update && apt install tini -y tini
+
+ENV ROCKET_ADDRESS=0.0.0.0
+ENV ROCKET_PORT=8080
+
+ENTRYPOINT ["tini"]
+CMD ["./hello_world"]
